Fix body height and width to prevent both scrollbars

--- a/style.css
+++ b/style.css
@@ -16,16 +16,6 @@
   font-family: action;
   src: url(./assets/Action_Man-webfont.woff);
 }
-/* To be deleted */
-/* header,
-nav,
-main,
-ul,
-div,
-aside {
-  border: 1px solid black;
-} */
-/* --------------- */
 * {
   margin: 0;
   padding: 0;
@@ -33,26 +23,25 @@ aside {
   list-style: none;
 }
 body {
-  height: 100vh;
-  width: 100vw;
+  min-height: 95vh;
+  width: 100%;
   background-image: var(--background-gradient);
-  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* =========  Structure  =========  */
 .main-container {
-  width: 98vw;
-  height: 98vh;
-  margin: 1vh 1vw;
+  max-width: 94vw;
+  height: 94vh;
+  margin: 3vh auto;
   background: var(--background-opacity);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   display: grid;
   grid-template-columns: 1fr 6fr;
   grid-template-rows: 1fr 4fr;
-  column-gap: 50px;
+  gap: 50px;
   grid-template-areas:
     "navbar header"
     "navbar main";
@@ -72,11 +61,13 @@ main {
   display: grid;
   grid-template-columns: 2.5fr 1fr;
   grid-template-areas: "projects announcements";
+  gap: 30px;
 }
 header {
   grid-area: header;
   display: grid;
   grid-template-rows: 1fr 2fr;
+  row-gap: 20px;
 }
 .top-header {
   display: grid;
@@ -97,21 +88,27 @@ header {
   grid-area: projects;
   display: grid;
   grid-template-rows: 0.3fr 6fr;
+  gap: 20px;
 }
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+  column-gap: 20px;
+  row-gap: 20px;
+  padding-bottom: 20px;
 }
 aside {
   grid-area: announcements;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  gap: 20px;
 }
 .assignment-container {
   display: grid;
   grid-template-rows: 0.3fr 2.9fr;
+  gap: 20px;
+  padding: 2px 20px;
 }
 .trending-container {
   display: grid;
@@ -218,6 +215,7 @@ nav ul li:hover {
 .profile img:nth-child(2) {
   background: var(--color-lime);
   border-radius: 80px;
+  margin-top: 3px;
   padding: 2px;
 }
 .user {
@@ -242,4 +240,49 @@ nav ul li:hover {
 }
 .header-buttons button:hover {
   transform: scale(1.1);
+}
+
+/* =========  Main styling  ========= */
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 10px;
+  background: var(--background-opacity);
+  border-radius: 8px;
+  padding: 10px;
+}
+.card:hover {
+  transform: translateY(-5px);
+}
+.card .icons {
+  align-self: flex-end;
+}
+.icons img {
+  padding: 0px 10px;
+  border-right: 3px solid var(--color-purple);
+}
+.icons img:last-child {
+  border: none;
+}
+.icons img:hover {
+  transform: translateY(-3px);
+}
+
+/* =========  Main  sidebar styling  ========= */
+.assignment-card {
+  background: var(--background-opacity);
+  border-radius: 8px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.assignment-card p {
+  border-bottom: 3px solid var(--color-turquise);
+  padding-bottom: 10px;
+}
+.assignment-card p:last-child {
+  border: none;
+  padding-bottom: 0px;
 }
